# m5stickc-wisunhat

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig.m5stick-c
include/: Application.hpp  Azure_IoT_Hub_ESP32  Bp35a1.hpp  Bp35a1_TypeDefine.hpp  EchonetLite.hpp  EchonetLite_TypeDefine.hpp  ElectricityMeterCommTask.hpp  EnergyMeterCommTask.hpp  Gauge.hpp  Gui.hpp  Repository.hpp  SmartWhm.hpp  Telemetry  lv_conf.h  (+4 more)
plot/: 2022-09-04T0000to2359.csv  2022-09-05T0000to2359.csv  2022-09-06T0000to2359.csv  2022-09-07T0000to2359.csv  2022-09-08T0000to2359.csv  2022-09-09T0000to2359.csv  2022-09-10T0000to2359.csv  2022-09-11T0000to2359.csv  2022-09-12T0000to2359.csv  2022-09-13T0000to2359.csv  2022-09-14T0000to2359.csv  2022-09-15T0000to2359.csv  2022-09-16T0000to2359.csv  2022-09-17T0000to2359.csv  2022-09-18T0000to2359.csv  2022-09-19T0000to2359.csv  2022-09-20T0000to2359.csv  2022-09-21T0000to2359.csv  2022-09-22T0000to2359.csv  2022-09-23T0000to2359.csv  2022-09-24T0000to2359.csv  2022-09-25T0000to2359.csv  2022-09-26T0000to2359.csv  2022-09-27T0000to2359.csv  2022-09-28T0000to2359.csv  2022-09-29T0000to2359.csv  2022-09-30T0000to2359.csv  2022-10-01T0000to2359.csv  2022-10-02T0000to2359.csv  2022-10-03T0000to2359.csv  2022-10-04T0000to2359.csv  2022-10-05T0000to2359.csv  2022-10-06T0000to2359.csv  2022-10-07T0000to2359.csv  2022-10-08T0000to2359.csv  2022-10-09T0000to2359.csv  2022-10-10T0000to2359.csv  2022-10-11T0000to2359.csv  2022-10-12T0000to2359.csv  2022-10-13T0000to2359.csv  (+315 more)
plot/src/: plotcharts.rs  retrieve_plotdata.rs
(+279 files in other folders)
