[package]
name = "plotcharts"
version = "0.1.0"
description = "plot charts"
authors = ["Akihiro Yamamoto <ak1211@mail.ak1211.com>"]
edition = "2021"

[[bin]]
name = "plotcharts"
path = "src/plotcharts.rs"

[[bin]]
name = "retrieve_plotdata"
path = "src/retrieve_plotdata.rs"

[dependencies]
anyhow = "1.0.71"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
chrono = "0.4.26"
chrono-tz = "0.8.2"
clap = { version = "4.3.4", features = ["derive"] }
itertools = "0.10.5"
plotters = "0.3.5"
polars = { version = "0.30.0", features = ["lazy", "dtype-datetime", "timezones"] }
tokio = { version = "1.28.2", features = ["full"] }
